--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="container"></div>
+    <div id="root" ></div>
     
     <!-- <script type="text/javascript">
       var feed = new Instafeed({
